--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "robin-plugin",
+  "name": "rw-postcode-lookup-plugin",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -10,5 +10,8 @@
   "license": "ISC",
   "devDependencies": {
     "parcel-bundler": "^1.12.5"
-  }
+  },
+  "browserslist": [
+    "since 2017-06"
+  ]
 }
